# push_swap

./: .gdbinit  .gitignore  CMakeLists.txt  CTestConfig.cmake  Readme.md  push_swap  usage.txt
.run/: Valgrind GDB.run.xml  push_swap.run.xml
checker/: checker.c
libft/: Makefile  libft.h
libft/string/: Makefile.mk  ft_strspn.c  ft_strtok.c
src/: main.c  push_swap.h
tests/: test1.c  test1.h
